<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <Button
        android:id="@+id/btn_0"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/st_0"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/st_1"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/st_2"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_igual"
        app:layout_constraintStart_toEndOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/st_3"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_igual"
        app:layout_constraintStart_toEndOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/st_4"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/st_5"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_2"
        app:layout_constraintStart_toEndOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/st_6"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_3"
        app:layout_constraintStart_toEndOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/st_8"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_5"
        app:layout_constraintStart_toEndOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:text="@string/st_7"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resultado" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/st_9"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_6"
        app:layout_constraintStart_toEndOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_borrar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/st_c"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_igual"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/st_igual"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_borrar" />

    <Button
        android:id="@+id/btn_sum"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/st_sum"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_igual" />

    <Button
        android:id="@+id/btn_res"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/blue"
        android:text="@string/st_res"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_sum"
        app:layout_constraintStart_toEndOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_mul"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/blue"
        android:text="@string/st_mul"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_res"
        app:layout_constraintStart_toEndOf="@+id/btn_6" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/blue"
        android:text="@string/st_div"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_mul"
        app:layout_constraintStart_toEndOf="@+id/btn_9" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/st_0"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_div"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_operacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_resultado"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>